30-tools/vault/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: vault.check-consulting.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vault
                port:
                  number: 8200
  tls:
    - hosts:
        - vault.check-consulting.net
      secretName: vault.check-consulting.net.tls
